Handle form and treeviews with the correct overflow

--- a/sao/src/sao.less
+++ b/sao/src/sao.less
@@ -152,7 +152,6 @@ html[theme="default"] {
 
 #menu, #tabs {
     margin-top: 5px;
-    padding-bottom: 5px;
 }
 
 #menu {
@@ -191,7 +190,7 @@ html[theme="default"] {
         display: flex;
         flex-direction: column;
         flex: 1;
-        margin-bottom: 0;
+        margin-bottom: 5px;
 
         > .panel-body {
             display: flex;
